[package]
name = "usertimers"
version = "1.0.1"
edition = "2024"
description = "A simple way to make systemd user timers, and might grow up into a full simple systemd frontend"
repository = "https://github.com/galacticSystemsInDevelopment/systemd-user-timers"
license = "MIT"


[dependencies]
clap = { version = "4.5.43", features = ["cargo"] }
