[package]
name = "systemd-user-timers"
version = "1.0.2"
edition = "2024"
description = "A simple way to make systemd user timers, and might grow up into a full simple systemd frontend"
repository = "https://github.com/galacticSystemsInDevelopment/systemd-user-timers"
license = "MIT"

[[bin]]
name = "usertimers"  # This changes the name of the executable
path = "src/main.rs"         # The path to your Rust source code

[dependencies]
clap = { version = "4.5.43", features = ["cargo"] }
