[package]
name = "ezusertimers"
version = "0.1.0"
edition = "2024"
authors = ["Michael Descy <mike@mjdescy.me>"]
description = "A simple command-line tool to manage user timers."
license = "MIT"

[[bin]]
name = "ezusertimers"        # This changes the name of the executable
path = "src/main.rs"         # The path to your Rust source code

[dependencies]
clap = { version = "4.5.43", features = ["cargo"] }
shellexpand = "3.1.1"
